--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/arkpz?useSSL=fal
 spring.datasource.username=root
 spring.datasource.password=12345678
 
+jwt.token.secret=jwtappdemo
+jwt.token.expired=36000000
+
